[package]
name = "yak-mq"
version = "0.1.0"
authors = ["cez"]

[[bin]]
name = "yak_server"
path = "src/main.rs"

[build-dependencies]
capnpc = "^0.2.0"

[dependencies.yak_client]
path = "./yak_client"

[dependencies]
url = "0.2.34"
log = "^0.3"
log4rs = "^0.3.3"
env_logger = "^0.3"
capnp = "^0.2.0"
quickcheck = "^0.2.19"

[dev-dependencies]
