[package]
name = "yak-mq"
version = "0.1.0"
authors = ["cez"]

[[bin]]
name = "yak_server"
path = "src/main.rs"

[dependencies.yak_client]
path = "./yak_client"

[dependencies]
url = "0.2.34"
log = "^0.3"
log4rs = "^0.3.3"
env_logger = "^0.3"
capnp = "^0.4.3"
quickcheck = "^0.2.19"
rand = "*"
byteorder = "*"
rusqlite = "0.2.0"
r2d2_sqlite = "*"
r2d2 = "*"


[dev-dependencies]
